# lockboot

./: .gitignore  Cargo.toml  Dockerfile.build  Dockerfile.dev  Dockerfile.runtime  Makefile  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
crates/example-stage2/: Cargo.toml  README.md
crates/example-stage2/src/: main.rs
crates/rawdogtpm2/: AWS-NITRO.md  CLAUDE.md  Cargo.toml  README.md
crates/rawdogtpm2-verify/: Cargo.toml  README.md  test-nitro-fixture.json
crates/rawdogtpm2-verify/src/: error.rs  lib.rs  nitro.rs  tpm.rs  x509.rs
crates/rawdogtpm2/src/: a9n.rs  credential.rs  ek.rs  lib.rs  nsm.rs  nv.rs  pcr.rs
crates/stage1/: Cargo.toml  README.md
crates/stage1/src/: main.rs
downloads/: .gitignore  Makefile
scripts/: .dockerignore  boot.sh  build.sh  ec2-create-ami.sh  ec2-create-vmimport-role.sh  provision-test-tpm.sh
tools/build-uki/: .dockerignore  Makefile  build.sh  download-and-verify.sh  init  udhcpc.script
tools/build-uki/keys/: .gitignore  Makefile
tools/publish/ec2/: create-ami.sh
tools/publish/gcp/: NOTES.md  create-image.sh  launch-instance.sh
tools/qemu-test/: .gitignore  Makefile  boot.sh  provision-test-tpm.sh
