[workspace]
members = ["crates/rawdogtpm2", "crates/stage1", "crates/example-stage2"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
serde_bytes = "0.11"
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
libc = "0.2"

reqwest = { version = "=0.12.24", default-features = false, features = ["blocking", "rustls-tls-webpki-roots-no-provider"] }
rustls = { version = "=0.23.23", default-features = false, features = ["std", "tls12"] }
rustls-rustcrypto = { version = "=0.0.2-alpha", default-features = false, features = ["std", "zeroize"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Maximize optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler
