[package]
name = "rawdogtpm2"
version = "0.1.0"
edition = "2021"
description = "Minimal TPM 2.0 protocol implementation without C dependencies"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "rawdogtpm2"
path = "src/lib.rs"
